<resources>
    <string name="app_name">Songs Like This</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="song_cover">song cover</string>
    <string name="songs_like_this">Songs Like This</string>
    <string name="popular">Popular</string>

    <string name="shazam">Shazam</string>
    <string name="AD_UNIT_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

    <!-- Preferences -->
    <string name="purchase_premium">Purchase Premium</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_privacy_policy">This is privacy policy.</string>
    <string name="please_turn_on_the_internet">Please turn on the internet</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="todo">TODO</string>
</resources>