<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sidharth.MainActivity">

    <TextView
        android:id="@+id/et_search_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="null"
        android:background="@drawable/bg_search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/robot_regular"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_search" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:reverseLayout="true"
            tools:listitem="@layout/item_similar" />

        <ProgressBar
            android:id="@+id/progress_bar_similar_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/robot_bold"
        android:text="@string/popular"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:reverseLayout="true"
            tools:listitem="@layout/item_popular" />

        <ProgressBar
            android:id="@+id/progress_bar_popular_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/AD_UNIT_ID" />

</LinearLayout>